--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,77 +1,79 @@
 body {
-  font-family:Quicksand,Arial,sans-serif;
+  font-family: Quicksand, Arial, sans-serif;
 }
 
 header h1 {
-  font-family:'Quicksand light', sans-serif;
+  font-family: "Quicksand light", sans-serif;
 }
 
 header h4 {
-  font-family:'Quicksand bold', sans-serif;
-  font-size:1em;
-  font-weight:bold;
+  font-family: "Quicksand bold", sans-serif;
+  font-size: 1em;
+  font-weight: bold;
 }
 
 header .logo-icon {
-  width:80px;
-  margin-top:2%;
+  width: 80px;
+  margin-top: 2%;
 }
 
-header .name-title, header h1, header h4 {
-  color:#2d3c49;
-  margin:5px 0px 5px 0px;
-  white-space:nowrap;
-  float:right;
+header .name-title,
+header h1,
+header h4 {
+  color: #2d3c49;
+  margin: 5px 0px 5px 0px;
+  white-space: nowrap;
+  float: right;
 }
 
 .line {
-  background-color:#7f96aa;
-  width:100%;
-  height:3px;
+  background-color: #7f96aa;
+  width: 100%;
+  height: 3px;
 }
 
 .main-image {
-  display:inline-flex;
-  width:100%;
+  display: inline-flex;
+  width: 100%;
 }
 
 .featured-work {
-  color:#7d97ad;
+  color: #7d97ad;
 }
 
 .thumbnail {
-  width:33.3333%;
-  display:block;
-  border:none;
-  box-shadow:none;
+  width: 33.3333%;
+  display: block;
+  border: none;
+  box-shadow: none;
 }
 
 .thumbnail .caption {
-  text-align:center;
+  text-align: center;
 }
 
 .thumbnail .caption h3 {
   margin: 5px 0;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
 
 .featured-work-container {
-  display:inline-flex;
+  display: inline-flex;
 }
 
 footer {
-  text-align:center;
-  color:#2f3941;
+  text-align: center;
+  color: #2f3941;
 }
 
 @media (max-width:991px) {
   .thumbnail {
-    width:100%;
+    width: 100%;
   }
   .featured-work {
-    text-align:center;
+    text-align: center;
   }
   .featured-work-container {
-    display:block;
+    display: block;
   }
 }
